# git-reticulator

./: .conflow.yaml  .gitignore  0-AI-MANIFEST.a2ml  CHANGELOG.md  Cargo.toml  EXPLAINME.adoc  Justfile  PROOF-NEEDS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  READINESS.md  README.adoc  README.md  TEST-NEEDS.md  TOPOLOGY.md  flake.nix  guix.scm  k9iser.toml  llm-warmup-dev.md  llm-warmup-user.md  setup.sh  stapeln.toml
.github/: dependabot.yml
.github/workflows/: casket-pages.yml  proof-corpus.yml  rust-ci.yml  scorecard.yml
.machine_readable/: ADJUST.contractile  INTENT.contractile  MUST.contractile  STATE.a2ml  TRUST.contractile
.machine_readable/6a2/: AGENTIC.a2ml  ECOSYSTEM.a2ml  META.a2ml  NEUROSYM.a2ml  PLAYBOOK.a2ml  STATE.a2ml
.machine_readable/agent_instructions/: debt.a2ml
.machine_readable/bot_directives/: coverage.a2ml  debt.a2ml  methodology.a2ml
.machine_readable/contractiles/: Justfile
.well-known/: security.txt
.well-known/groove/: manifest.json
benches/: git_reticulator_bench.rs
contractiles/intend/: Intentfile.a2ml
contractiles/must/: Mustfile.a2ml
contractiles/trust/: Trustfile.a2ml
docs/: DOGFOOD.adoc  MIGRATION-PLAN.adoc  setup.md  tech-debt-2026-05-26.md
docs/decisions/: rust-spark-stance.adoc
src/: ingest.rs  lib.rs  query.rs  store.rs
src/api/: app.rs
src/cli/: main.rs
src/lattice/: mod.rs
src/lattice/affine/: lattice.affine  lattice.as  models.affine  models.as  storage.affine  storage.as
tests/: api_tests.rs  integration_tests.rs  lattice_tests.affine  lattice_tests.as  property_tests.rs
verification/proofs/: .gitignore  git-reticulator-proofs.ipkg
verification/proofs/Lattice/: Order.idr
