[package]
name = "git-reticulator"
version = "0.1.0"
edition = "2021"
description = "Semantic lattice builder for git repositories in AffineScript"
license = "PMPL-1.0-or-later"
authors = ["Jonathan D.A. Jewell (hyperpolymath) <j.d.a.jewell@open.ac.uk>"]
repository = "https://github.com/hyperpolymath/git-reticulator"
readme = "README.md"

[dependencies]
# Core dependencies (always required)
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.0"                     # REST API server
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }

# Optional dependencies (feature-gated)
affinescript = { package = "affinescript-runtime", path = "../nextgen-languages/affinescript/runtime", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
git2 = { version = "0.20", optional = true }               # Git repo parsing
postgres = { version = "0.19", features = ["with-uuid-1"], optional = true }
tch = { version = "0.13", optional = true }                 # PyTorch embeddings

[features]
default = []
affinescript-engine = ["affinescript"]     # AffineScript runtime integration
git-integration = ["git2"]                # Git repository parsing
db = ["postgres"]                         # PostgreSQL connectivity
embeddings = ["tch"]                      # PyTorch-based embeddings
http-client = ["reqwest"]                 # HTTP client for external calls
full = ["affinescript-engine", "git-integration", "db", "embeddings", "http-client"]

[dev-dependencies]
criterion = "0.4"                     # For benchmarks

[lib]
name = "git_reticulator"
path = "src/lib.rs"

[[bin]]
name = "reticulate"
path = "src/cli/main.rs"
