[package]
name = "git-reticulator"
version = "0.1.0"
edition = "2021"
description = "Semantic lattice builder for git repositories in AffineScript"
license = "MPL-2.0"
authors = ["Jonathan D.A. Jewell (hyperpolymath) <j.d.a.jewell@open.ac.uk>"]
repository = "https://github.com/hyperpolymath/git-reticulator"
readme = "README.adoc"

[dependencies]
# Core dependencies (always required)
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.0"                     # REST API server
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }

# Optional dependencies (feature-gated)
# NOTE: the affinescript-runtime dependency is intentionally absent. AffineScript
# integration is deferred until the Rust↔AffineScript bridge exists (ADR-006);
# it will be re-added as a git/published dep (not a path dep) when that lands.
reqwest = { version = "0.13", features = ["json"], optional = true }
git2 = { version = "0.20", optional = true }               # Git repo parsing
postgres = { version = "0.19", features = ["with-uuid-1"], optional = true }
tch = { version = "0.24", optional = true }                 # PyTorch embeddings

[features]
default = []
verisim = ["reqwest"]                     # VeriSimDB octad store over HTTP (src/store.rs)
git-integration = ["git2"]                # Git repository parsing
db = ["postgres"]                         # PostgreSQL connectivity (legacy; superseded by verisim)
embeddings = ["tch"]                      # PyTorch-based embeddings
http-client = ["reqwest"]                 # HTTP client for external calls
full = ["verisim", "git-integration", "db", "embeddings", "http-client"]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }   # Benchmarks
proptest = "1"                                                  # Property-based testing

[lib]
name = "git_reticulator"
path = "src/lib.rs"

[[bin]]
name = "reticulate"
path = "src/cli/main.rs"

[[bench]]
name = "git_reticulator_bench"
harness = false
